--- a/hoj-vue/public/index.html
+++ b/hoj-vue/public/index.html
@@ -15,7 +15,9 @@
   />
   <% } %>
   <!-- 使用CDN的CSS文件 -->
-  <title>Hcode OnlineJudge</title>
+  <title>SXUOJ</title>
+  <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({id:"JmbcAjeX5SSnvAbl",ck:"JmbcAjeX5SSnvAbl"})</script>
   <script>
     // IE 10 and earlier
     if (window.navigator.userAgent.indexOf('MSIE ') > 0 &&
